force-app/main/default/objects/Application_Review_Checklist__c/Application_Review_Checklist__c.object-meta.xml
<CustomObject>
    <label>Application Review Checklist</label>
    <nameField>
        <displayFormat>ARC-{0}</displayFormat>
        <label>Application Review Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Review Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>