force-app/main/default/objects/Application_Review_Checklist__c/fields/ApplicationSubmittedByDueDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationSubmittedByDueDate__c</fullName>
    <label>Application Submitted by Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>