force-app/main/default/objects/Application_Review_Checklist__c/fields/AreItemsListedWithAnswersBelow__c.field-meta.xml
<CustomField>
    <fullName>AreItemsListedWithAnswersBelow__c</fullName>
    <label>Are Items Listed With Answers Below?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>