force-app/main/default/objects/Application_Review_Checklist__c/fields/BudgetBudgetNarrativeUptoMax4Page__c.field-meta.xml
<CustomField>
    <fullName>BudgetBudgetNarrativeUptoMax4Page__c</fullName>
    <label>Budget/Budget Narrative Upto Max 4 Page</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>