force-app/main/default/objects/Application_Review_Checklist__c/fields/DateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateSubmitted__c</fullName>
    <label>Date submitted</label>
    <type>Date</type>
</CustomField>