force-app/main/default/objects/Application_Review_Checklist__c/fields/Funding_Application__c.field-meta.xml
<CustomField>
    <fullName>Funding_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Application</label>
    <referenceTo>Funding_Application__c</referenceTo>
    <relationshipLabel>Application Review Checklists</relationshipLabel>
    <relationshipName>Application_Review_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>