force-app/main/default/objects/Application_Review_Checklist__c/fields/PagesTypedInBlackSingleSpaced__c.field-meta.xml
<CustomField>
    <fullName>PagesTypedInBlackSingleSpaced__c</fullName>
    <label>Pages Typed in Black &amp; Single-Spaced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>