force-app/main/default/objects/Application_Review_Checklist__c/fields/PutOrgNamePageNoInFooter__c.field-meta.xml
<CustomField>
    <fullName>PutOrgNamePageNoInFooter__c</fullName>
    <label>Put Org Name &amp; Page No. In Footer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>