force-app/main/default/objects/Application_Review_Checklist__c/fields/Qualifications_Experience_Up_To_4_Page__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_Experience_Up_To_4_Page__c</fullName>
    <label>Qualifications &amp; Experience Up To 4 Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>