force-app/main/default/objects/Application_Review_Checklist__c/fields/SelectedStrategiesFromApprovedList__c.field-meta.xml
<CustomField>
    <fullName>SelectedStrategiesFromApprovedList__c</fullName>
    <label>Selected Strategies From Approved List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>