force-app/main/default/objects/Application_Review_Checklist__c/fields/StatementOfNeed__c.field-meta.xml
<CustomField>
    <fullName>StatementOfNeed__c</fullName>
    <label>Statement Of Need</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>