force-app/main/default/objects/Application_Review_Checklist__c/fields/Technical_Section_Is_No_More_Than_8_Page__c.field-meta.xml
<CustomField>
    <fullName>Technical_Section_Is_No_More_Than_8_Page__c</fullName>
    <label>Technical Section Is No More Than 8 Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>